2006-01-16  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager: Remov unused code.
	* src/GrampsDb/_GrampsBSDDB.py: Do small txn during batch
	transaction; set db.DB_TXN_NOSYNC flag on an environment;
	Remove lock limits; set db.DB_LOG_AUTOREMOVE flag; add checkpoints
	on: open, batch transaction start and end; close.
	* src/GrampsDb/_GrampsDbBase.py (change_database, no_database):
	close existing db before changing to the new one.

2006-01-16  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/PedView.py: Edit on doublecklick; only right click gives
	optionsmenu; Colors similar to tango icons
	
2006-01-16  Don Allingham  <don@gramps-project.org>
	* src/gramps.glade: reposition add/delete buttons, remove separator
	between parents and relationship info

2006-01-16 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
       * src/ObjectSelector/_Factories.py: refactored object frame
       * src/ObjectSelector/_FamilyFrame.py: refactored object frame
       * src/ObjectSelector/_ObjectFrameBase.py: refactored object frame
       * src/ObjectSelector/_ObjectSelectorWindow.py: refactored object frame
       * src/ObjectSelector/_PersonFilterFrame.py: refactored object frame
       * src/ObjectSelector/_PersonFrame.py: refactored object frame
       * src/ObjectSelector/_PersonSearchCriteriaWidget.py: renamed file


2006-01-14  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs.py: add button control class
	* src/EditFamily.py: add icons
	* src/DisplayTabs.py: fix double click
	* src/EditFamily.py: fix double click
	* src/GrampsWidgets.py: add SimpleButton
	* src/ToolTips.py: Family tool tip

2006-01-14 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
       * src/ObjectSelector/_Constants.py: enums
       * src/ObjectSelector/_Factories.py: multi object type factories
       * src/ObjectSelector/_FamilyFilterFrame.py: family support 
       * src/ObjectSelector/_FamilyPreviewFrame.py: family support 