@@ -2423,7 +2423,7 @@
 		<widget class="GtkToggleButton" id="togglebutton1">
 		  <property name="visible">True</property>
 		  <property name="can_focus">True</property>
-		  <property name="relief">GTK_RELIEF_NORMAL</property>
+		  <property name="relief">GTK_RELIEF_NONE</property>
 		  <property name="focus_on_click">True</property>
 		  <property name="active">False</property>
 		  <property name="inconsistent">False</property>
