@@ -1,3 +1,7 @@
+2006-01-16  Don Allingham  <don@gramps-project.org>
+	* src/gramps.glade: remove lock border
+	* src/GrampsDb/_ReadGedcom.py: optimize UI updates
+
 2006-01-16  Alex Roitman  <shura@gramps-project.org>
 	* src/ViewManager: Remov unused code.
 	* src/GrampsDb/_GrampsBSDDB.py: Do small txn during batch
